--- a/collection.html
+++ b/collection.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/global.css">
-    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .back-to-top {
             position: fixed;
@@ -21,47 +20,50 @@
 </head>
 
 <body class="bg-gray-100">
-    <header class="text-white text-center py-3">
-        <nav class="navbar navbar-expand-lg">
+    <header class="navbar navbar-expand-lg bd-navbar sticky-top">
+        <nav class="container-xxl bd-gutter flex-wrap flex-lg-nowrap">
             <div class="container-fluid">
-                <a class="navbar-brand" href="thisnthatmixupshop.html">
-                    <img src="assets/logo.png" alt="Logo" class="navbar-brand logo">
-                    <!-- <img src="assets/sprites.png" alt="Logo" class="logo2"> -->
-                </a>
-
-                <div class="navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                <button class="navbar-toggler text-black border-white" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarToggler">
+                    <a class="navbar-brand" href="thisnthatmixupshop.html">
+                        <img class="logo" src="assets/logo.png">
+                    </a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="thisnthatmixupshop.html">Home</a>
+                            <a class="nav-link text-black" aria-current="page" href="thisnthatmixupshop.html">Home</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <a class="nav-link text-black dropdown-toggle" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Shop
                             </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="catalog_apparel.html">Apparel</a></li>
-                                <li><a class="dropdown-item" href="catalog_accessories.html">Accessories</a></li>
-                                <li><a class="dropdown-item" href="catalog_figures.html">Figures</a></li>
+                            <ul class="dropdown-menu bg-white text-black">
+                                <li><a class="dropdown-item text-black" href="shop_apparel.html">Apparel</a></li>
+                                <li><a class="dropdown-item text-black" href="shop_accessories.html">Accessories</a>
+                                </li>
+                                <li><a class="dropdown-item text-black" href="shop_figures.html">Figures</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="aboutus.html">About Us</a>
+                            <a class="nav-link text-black" href="aboutus.html">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <i class="bi bi-cart2 fs-4"></i>
-                            <span id="cart-count">0</span>
+                            <a class="nav-link text-black flex items-center" href="cart.html">
+                                <i class="bi bi-cart2"></i>
+                                <span id="cart-count" class="ml-1">0</span> items
+                            </a>
                         </li>
                     </ul>
+                    <form id="search-form" class="d-flex" role="search">
+                        <input id="search-input" class="form-control me-2" type="search"
+                            placeholder="What are you looking for?" aria-label="Search">
+                        <button class="btn btn-success" type="submit">Search</button>
+                    </form>
                 </div>
-            </div>
-
-            <div class="container-fluid">
-                <form id="search-form" class="d-flex" role="search">
-                    <input id="search-input" class="form-control me-2" type="search"
-                        placeholder="What are you looking for?" aria-label="Search">
-                    <button class="btn btn-success" type="submit">Search</button>
-                </form>
             </div>
         </nav>
     </header>
@@ -88,74 +90,8 @@
     <script src="js/product.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/collection.js"></script>
-    <script>
-        document.getElementById('search-form').addEventListener('submit', function (event) {
-            event.preventDefault();
-            const searchTerm = document.getElementById('search-input').value.trim().toLowerCase();
-            const filteredProducts = products.filter(product => product.name.toLowerCase().includes(searchTerm));
-            localStorage.setItem('filteredProducts', JSON.stringify(filteredProducts));
-            window.location.href = 'collection.html';
-        });
-
-        document.addEventListener('DOMContentLoaded', function () {
-            const filteredProducts = JSON.parse(localStorage.getItem('filteredProducts')) || [];
-            updateSearchResultsHeading(filteredProducts.length);
-            renderProducts(filteredProducts);
-
-            if (filteredProducts.length === 0) {
-                document.getElementById('catalog-links').innerHTML = `
-                    <!-- Section Links -->
-        <h2 class="text-center mb-4 display-4">Shop</h2>
-        <div class="row mb-4">
-            <div class="col-md-2 mb-4 offset-md-3">
-                <div class="card catalog-card">
-                    <a href="catalog_apparel.html" class="section-link">
-                        <div class="square-image">
-                            <img src="products/Apparel/neko-luffy-tee2.jpg" alt="Apparel">
-                        </div>
-                        <div class="label">Apparel</div>
-                    </a>
-                </div>
-            </div>
-            <div class=" col-md-2 mb-4 mx-2">
-                <div class="card catalog-card">
-                    <a href="catalog_accessories.html" class="section-link">
-                        <div class="square-image">
-                            <img src="products/Keychains/accessory-img.jpg" alt="Accessories">
-                        </div>
-                        <div class="label">Accessories</div>
-                    </a>
-                </div>
-            </div>
-            <div class=" col-md-2 mb-4 mx-2">
-                <div class="card catalog-card">
-                    <a href="catalog_figures.html" class="section-link">
-                        <div class="square-image">
-                            <img src="products/Figures/tengen-funko.jpg" alt="Figures">
-                        </div>
-                        <div class="label">Figures</div>
-                    </a>
-                </div>
-            </div>
-        </div>
-                `;
-            }
-        });
-
-        // Back to top button
-        const backToTopButton = document.getElementById('back-to-top');
-        window.addEventListener('scroll', function () {
-            if (window.scrollY > 200) {
-                backToTopButton.style.display = 'block';
-            } else {
-                backToTopButton.style.display = 'none';
-            }
-        });
-
-        backToTopButton.addEventListener('click', function () {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        });
-    </script>
+    <script src="js/assets.js"></script>
+    
 </body>
 
 </html>
