--- a/shop_accessories.html
+++ b/shop_accessories.html
@@ -4,73 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Details</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Accessories</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/global.css">
-    <style>
-        .thumbnail {
-            cursor: pointer;
-            margin: 5px;
-            width: 100px;
-            height: 100px;
-        }
-
-        .thumbnail.active {
-            border: 2px solid #007bff;
-        }
-
-        .product-image {
-            max-width: 300px;
-            max-height: 300px;
-            display: block;
-            margin: 0 auto;
-        }
-
-        .product-title {
-            font-size: 2rem;
-        }
-
-        .product-description {
-            font-size: 1.25rem;
-        }
-
-        .product-price {
-            font-size: 1.5rem;
-        }
-
-        .quantity-container {
-            display: flex;
-            align-items: center;
-        }
-
-        .quantity-container button {
-            width: 30px;
-            height: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .quantity-container span {
-            width: 60px;
-            text-align: center;
-            display: inline-block;
-        }
-
-        .popup {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: #28a745;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            display: none;
-            z-index: 1000;
-        }
-    </style>
 </head>
 
 <body class="bg-gray-100">
@@ -123,36 +61,32 @@
     </header>
 
     <main class="container my-5">
-        <div id="product-details" class="row justify-content-center">
-            <div class="col-12 col-md-4 text-center">
-                <img id="product-image" class="img-fluid product-image card-img-top" alt="Product Image">
-                <div id="image-thumbnails" class="d-flex flex-wrap justify-content-center mt-3"></div>
-            </div>
-            <div class="col-12 col-md-6">
-                <h1 id="product-title" class="product-title"></h1>
-                <p><strong>Price:</strong> <span id="product-price" class="product-price"></span></p>
-                <div class="mb-3">
-                    <label for="quantity"><strong>Quantity:</strong></label>
-                    <div class="quantity-container mb-2">
-                        <button id="decrease-quantity" class="btn btn-outline-secondary">-</button>
-                        <span id="quantity">1</span>
-                        <button id="increase-quantity" class="btn btn-outline-secondary">+</button>
-                    </div>
-                    <p id="size-error-message" class="text-danger" style="display: none;">
-                        <strong>Select a size before adding to cart!</strong></p>
-                    <div id="product-sizes" class="mb-3" style="display: none;">
-                        <label><strong>Available Sizes:</strong></label>
-                        <div id="size-buttons" class="d-flex flex-wrap"></div>
-                    </div>
-                    <button class="btn btn-primary add-to-cart">Add to Cart</button>
-                    <p id="product-description" class="product-description"></p>
-                </div>
+        <div class="card w-75 mx-auto">
+            <div class="row justify-content-center">
+                <h2 class="text-center mb-4 display-4">Necklaces</h2>
+                <!-- Necklace Products -->
+                <div id="necklaces-products" class="row justify-content-center"></div>
             </div>
         </div>
-
-        <div id="popup" class="popup">Item added to cart successfully!</div>
-
+        <br> <br>
+        <div class="card w-75 mx-auto">
+            <div class="row justify-content-center">
+                <h2 class="text-center mb-4 display-4">Keychains</h2>
+                <!-- Keychain Products -->
+                <div id="keychains-products" class="row justify-content-center"></div>
+            </div>
+        </div>
+        <br> <br>
+        <div class="card w-75 mx-auto">
+            <div class="row justify-content-center">
+                <h2 class="text-center mb-4 display-4">Mugs</h2>
+                <!-- Mug Products -->
+                <div id="mugs-products" class="row justify-content-center"></div>
+            </div>
+        </div>
+        <br> <br>
     </main>
+
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2025 My Online Store</p>
     </footer>
@@ -162,7 +96,7 @@
     </button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/fetch_product.js"></script>
+    <script src="js/fetch_shop.js"></script>
     <script src="js/product.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/collection.js"></script>
