--- a/testing.html
+++ b/testing.html
@@ -9,56 +9,57 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/global.css">
-    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-gray-100">
-    <header class="text-white text-center py-3">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="thisnthatmixupshop.html">
-                    <img src="assets/logo.png" alt="Logo" class="navbar-brand logo">
-                    <!-- <img src="assets/sprites.png" alt="Logo" class="logo2"> -->
-                </a>
 
-                <div class="navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+    <header class="navbar navbar-expand-lg bd-navbar sticky-top">
+        <nav class="container-xxl bd-gutter flex-wrap flex-lg-nowrap">
+            <div class="container-fluid">
+                <button class="navbar-toggler text-black border-white" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarToggler">
+                    <a class="navbar-brand" href="thisnthatmixupshop.html">
+                        <img class="logo" src="assets/logo.png">
+                    </a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="thisnthatmixupshop.html">Home</a>
+                            <a class="nav-link text-black" aria-current="page" href="thisnthatmixupshop.html">Home</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <a class="nav-link text-black dropdown-toggle" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Shop
                             </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="catalog_apparel.html">Apparel</a></li>
-                                <li><a class="dropdown-item" href="catalog_accessories.html">Accessories</a></li>
-                                <li><a class="dropdown-item" href="catalog_figures.html">Figures</a></li>
+                            <ul class="dropdown-menu bg-white text-black">
+                                <li><a class="dropdown-item text-black" href="catalog_apparel.html">Apparel</a></li>
+                                <li><a class="dropdown-item text-black" href="catalog_accessories.html">Accessories</a>
+                                </li>
+                                <li><a class="dropdown-item text-black" href="catalog_figures.html">Figures</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="aboutus.html">About Us</a>
+                            <a class="nav-link text-black" href="aboutus.html">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <i class="bi bi-cart2 fs-4"></i>
-                            <span id="cart-count">0</span>
+                            <a class="nav-link text-black flex items-center" href="cart.html">
+                                <i class="bi bi-cart2"></i>
+                                <span id="cart-count" class="ml-1">0</span> items
+                            </a>
                         </li>
                     </ul>
+                    <form id="search-form" class="d-flex" role="search">
+                        <input id="search-input" class="form-control me-2" type="search"
+                            placeholder="What are you looking for?" aria-label="Search">
+                        <button class="btn btn-success" type="submit">Search</button>
+                    </form>
                 </div>
-            </div>
-
-            <div class="container-fluid">
-                <form id="search-form" class="d-flex" role="search">
-                    <input id="search-input" class="form-control me-2" type="search"
-                        placeholder="What are you looking for?" aria-label="Search">
-                    <button class="btn btn-success" type="submit">Search</button>
-                </form>
             </div>
         </nav>
     </header>
-
-
 
     <main class="container my-5">
         <!-- Section Links -->
@@ -200,22 +201,16 @@
         <p>&copy; 2025 My Online Store</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <button class="btn btn-primary back-to-top" id="back-to-top">
+        <i class="bi bi-arrow-up"></i>
+    </button>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/product.js"></script>
     <script src="js/fetch_apparel.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/collection.js"></script>
-    <script>
-        document.getElementById('search-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const searchTerm = document.getElementById('search-input').value.trim().toLowerCase();
-            const filteredProducts = products.filter(product => product.name.toLowerCase().includes(searchTerm));
-            localStorage.setItem('filteredProducts', JSON.stringify(filteredProducts));
-            window.location.href = 'collection.html';
-        });
-    </script>
+    
 </body>
 
 </html>
