--- a/thisnthatmixupshop.html
+++ b/thisnthatmixupshop.html
@@ -9,95 +9,60 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/global.css">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        .section-link {
-            position: relative;
-            display: inline-block;
-            text-align: center;
-            color: white;
-        }
-
-        .section-link img {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-        }
-
-        .section-link .label {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px 20px;
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-
-        .square-image {
-            width: 100%;
-            padding-top: 100%;
-            position: relative;
-        }
-
-        .square-image img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .catalog-card {
-            max-width: 300px;
-            margin: 0 auto;
-            transition: background-color 0.3s ease;
-        }
-
-        .catalog-card:hover {
-            background-color: grey;
-            transform: scale(1.1);
-            transition: transform 0.4s ease-in-out;
-        }
-    </style>
 </head>
 
-<body class="bg-gray-100">
-    <header class="text-white text-center py-3">
-        <div class="container d-flex justify-content-center align-items-center">
-            <a href="thisnthatmixupshop.html">
-                <img src="assets/logo.png" alt="Business Logo" class="logo img-fluid mx-auto d-block small-logo">
-            </a>
-        </div>
+<body>
+    <header class="navbar navbar-expand-lg bd-navbar sticky-top">
+        <nav class="container-xxl bd-gutter flex-wrap flex-lg-nowrap">
+            <div class="container-fluid">
+                <button class="navbar-toggler text-black border-white" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarToggler">
+                    <a class="navbar-brand" href="thisnthatmixupshop.html">
+                        <img class="logo" src="assets/logo.png">
+                    </a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-black" aria-current="page" href="thisnthatmixupshop.html">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-black dropdown-toggle" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Shop
+                            </a>
+                            <ul class="dropdown-menu bg-white text-black">
+                                <li><a class="dropdown-item text-black" href="shop_apparel.html">Apparel</a></li>
+                                <li><a class="dropdown-item text-black" href="shop_accessories.html">Accessories</a>
+                                </li>
+                                <li><a class="dropdown-item text-black" href="shop_figures.html">Figures</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="aboutus.html">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-black flex items-center" href="cart.html">
+                                <i class="bi bi-cart2"></i>
+                                <span id="cart-count" class="ml-1">0</span> items
+                            </a>
+                        </li>
+                    </ul>
+                    <form id="search-form" class="d-flex" role="search">
+                        <input id="search-input" class="form-control me-2" type="search"
+                            placeholder="What are you looking for?" aria-label="Search">
+                        <button class="btn btn-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
     </header>
 
-    <nav class="bg-primary text-white sticky-top">
-        <div class="container">
-            <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link text-white" href="thisnthatmixupshop.html">Home</a></li>
-                <div class="dropdown">
-                    <a class="nav-link text-white dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Shop
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <li><a class="dropdown-item" href="catalog_apparel.html">Apparel</a></li>
-                        <li><a class="dropdown-item" href="catalog_accessories.html">Accessories</a></li>
-                        <li><a class="dropdown-item" href="catalog_figures.html">Figures</a></li>
-                    </ul>
-                </div>
-                <li class="nav-item"><a class="nav-link text-white" href="aboutus.html">About Us</a></li>
-                <li class="nav-item">
-                    <a href="cart.html" class="nav-link text-white">
-                        <i class="bi bi-cart2"></i>
-                        <span id="cart-count">0</span> items
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <button class="btn btn-primary back-to-top" id="back-to-top">
+        <i class="bi bi-arrow-up"></i>
+    </button>
 
     <main class="container my-5">
         <!-- Section Links -->
@@ -105,7 +70,7 @@
         <div class="row mb-4">
             <div class="col-md-2 mb-4 offset-md-3">
                 <div class="card catalog-card">
-                    <a href="catalog_apparel.html" class="section-link">
+                    <a href="shop_apparel.html" class="section-link">
                         <div class="square-image">
                             <img src="products/Apparel/neko-luffy-tee2.jpg" alt="Apparel">
                         </div>
@@ -115,7 +80,7 @@
             </div>
             <div class=" col-md-2 mb-4 mx-2">
                 <div class="card catalog-card">
-                    <a href="catalog_accessories.html" class="section-link">
+                    <a href="shop_accessories.html" class="section-link">
                         <div class="square-image">
                             <img src="products/Keychains/accessory-img.jpg" alt="Accessories">
                         </div>
@@ -125,7 +90,7 @@
             </div>
                 <div class=" col-md-2 mb-4 mx-2">
                     <div class="card catalog-card">
-                        <a href="catalog_figures.html" class="section-link">
+                        <a href="shop_figures.html" class="section-link">
                             <div class="square-image">
                                 <img src="products/Figures/tengen-funko.jpg" alt="Figures">
                             </div>
@@ -275,12 +240,12 @@
         <p>&copy; 2025 My Online Store</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/product.js"></script>
-    <script src="js/fetch_apparel.js"></script>
     <script src="js/cart.js"></script>
+    <script src="js/collection.js"></script>
+    <script src="js/assets.js"></script>
+    
 </body>
 
 </html>
